--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,3 +14,14 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.header {
+  background-color: darkslateblue;
+  color: white;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  padding-left: 80px;
+  font-size: 24px;
+  
+}
